--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 								<li><a href="https://noahskang.wixsite.com/moria" class="icon alt fa-pencil"><span class="label">Moria</span></a></li>
 							</ul>
 						</div>
-						<p class="copyright">&copy; Untitled. All rights reserved.</p>
+						<p class="copyright">This site was designed and developed by Noah Kang</p>
 					</footer>
 
 			</div>
